Update SignalFlow